--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
-    "motion": "^12.4.3",
+    "motion": "^12.5.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-element-to-jsx-string": "^17.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
