--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "daisyui": "^5.0.50",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
     "motion": "^12.5.0",
